# bid-predictor

./: .gitignore  Dockerfile  Dockerfile.gpu  MANIFEST.in  README.md  README.yaml-features.md  create_auction_snapshots.py  create_auction_snapshots_spark.py  docker-build.txt  entrypoint.sh  preprocess_data.py  pyproject.toml  requirements.txt  run_snapshots.sh  submit_job.py  submit_job_gpu.py  train.py
bid_predictor/: __init__.py  bid_predictor.py  feature_config.py  feature_config.yaml  preprocessor.py  tracking.py  utils.py
config/: features.yaml
notebooks/: mlflow_model_registry.ipynb  tests.ipynb
scripts/: enable_yaml_features.py
