[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bid-predictor"                 # The package name on PyPI (hyphens OK)
version = "0.1.0"
description = "Simple bid prediction utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Christopher Gauthier" }]
keywords = ["bids", "prediction", "ml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://example.com/bid-predictor"
Repository = "https://example.com/bid-predictor"

# --- tell setuptools where to find your package ---
[tool.setuptools.packages.find]
where = ["."]
include = ["bid_predictor*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# [tool.setuptools.dynamic.optional-dependencies]
# dev  = { file = ["requirements-dev.txt"] }
# test = { file = ["requirements-test.txt"] }

# If you ship non-.py files inside bid_predictor/, uncomment:
[tool.setuptools]
include-package-data = true
